* executable: generated executable includes: require 'rubygems'

== 1.4.1 2009-05-02

* missing file from manifest.. I hate manifests.

== 1.4.0 2009-05-02

* install_shoulda - use "newgem -T shoulda" to use shoulda for testing instead of test_unit or rspec
* common_steps.rb - When steps all started with 'I ...'
* common.rb - using module instead of creating methods against global namespace; no more kittens killed [thx Ben Mabey]
* all +require 'rubygems'+ are conditional unless ENV['NO_RUBYGEMS'] [thx David Chelimsky + Ryan Tomayko]
* module_name supports hyphens throughout all generators (they are treated as underscores for camelize method)
* common_steps.rb - using "(.*)" for placeholders which is now cucumber defacto standard

== 1.3.0 2009-03-17

* install_cucumber: using layout like Rails' cucumber generator: features/support/env.rb + features/step_definitions/common_steps.rb

== 1.2.3 2008-12-29

* 'rake features' uses --format progress now
* bump rubigen to 1.5.1
* move website to gh-pages branch, and official homepage to http://drnic.github.com/newgem

== 1.2.2 2008-12-27

* Added USAGE file to install_cucumber generator so it shows up in lists of available generators
* Some improvements to common.rb

== 1.2.1 2008-12-15

* Fixed 'uninitialized constant NewgemGenerator::Newgem' bug [#14]
* Fixed some cucumber steps after rubigen refactoring

== 1.2.0 2008-12-11

* Newgem + RubiGen are Ruby 1.9.1 compliant.

== 1.1.0 2008-11-11

* Support for ~/.newgem.yml file for default CLI arguments
  * Example content: `default: -T rspec -i cucumber`
* executable and extconf generators will create specs or tests depending on what you are using in your RubyGems
* executable generator: test/spec files give more useful starting point with a StringIO passed into CLI.execute(stdout, args)
* 'rake manifest' instead of 'rake manifest:refresh' [was actually released in 1.0.7]

== 1.0.7 2008-11-08
