@@ -7,17 +7,13 @@ require 'pp'
 require 'fileutils'
 require 'rubygems' unless ENV['NO_RUBYGEMS']
 
-# Following lines from original Rails cucumber generator. 
-# Not sure how to translate/reuse etc yet.
-# 
-# # Sets up the Rails environment for Cucumber
-# ENV["RAILS_ENV"] = "test"
-# require File.expand_path(File.dirname(__FILE__) + '/../../config/environment')
-# require 'cucumber/rails/world'
-# Cucumber::Rails.use_transactional_fixtures
-# 
-# # Comment out the next line if you're not using RSpec's matchers (should / should_not) in your steps.
-# require 'cucumber/rails/rspec'
+Before do
+  @tmp_root = File.dirname(__FILE__) + "/../../tmp"
+  @home_path = File.expand_path(File.join(@tmp_root, "home"))
+  FileUtils.rm_rf   @tmp_root
+  FileUtils.mkdir_p @home_path
+  ENV['HOME'] = @home_path
+end
 
 # code from test/test_generator_helper.rb
 TMP_ROOT = File.dirname(__FILE__) + "/tmp" unless defined?(TMP_ROOT)
